--- a/index.html
+++ b/index.html
@@ -4,37 +4,46 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Tinyone</title>
+  <title>Portfolio</title>
   <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700" rel="stylesheet">
-  <link rel="stylesheet" href="css/bootstrap.min.js">
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/style.css">
 <body>
   <header id="header" class="header">
     <div class="container">
       <div class="row">
         <div class="col-lg-3">
-          <img src="" alt="">
+          <img src="img/logo_header.png" alt="logo">
         </div>
-        <div class="col-lg-5">
+        <div class="col-lg-5 ml-auto">
           <nav>
-            <ul class="menu">
+            <ul class="menu d-flex justify-content-center">
               <li class="menu__item">
                 <a href="">
-                  TEXT
+                  Features
                 </a>
               </li>
               <li class="menu__item">
                 <a href="">
-                  Text
+                  Support
                 </a>
               </li>
               <li class="menu__item">
                 <a href="">
-                  TEXT
+                  Blog
                 </a>
               </li>
             </ul>
           </nav>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-lg-6">
+
+        </div>
+        <div class="col-lg-5 ml-auto">
+
         </div>
       </div>
     </div>
